--- a/style.css
+++ b/style.css
@@ -16,18 +16,18 @@ body {
 }
 
 #input-el {
-        background-color: #6943FF;
-        text-align: center;
-        border: 2px solid #B295FF;
-        border-radius: 4%;
-        font-size: 110px;
-        font-weight: bold;
-        width: 200px;
-        height: 140px;
-        margin: 50px auto;
-        color: white;
-        -webkit-appearance: none;
-        -moz-appearance: textfield;            
+    background-color: #6943FF;
+    text-align: center;
+    border: 2px solid #B295FF;
+    border-radius: 4%;
+    font-size: 110px;
+    font-weight: bold;
+    width: 200px;
+    height: 140px;
+    margin: 50px auto;
+    color: white;
+    -webkit-appearance: none;
+    -moz-appearance: textfield;
 }
 
 h1 {
@@ -70,10 +70,10 @@ button {
 
 .unit-place {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     color: white;
 }
 
 p {
-    margin: 25px 1px 6px;
+    margin: 25px 5px 6px;
 }
